namespace DDDNetCore.Domain.Patient;

public enum Gender
{
    Male,
    Female,
    Other
}