namespace DDDNetCore.Domain.Sessions;

public class Token
{
    
    
    
}