
namespace DDDNetCore.Domain.SurgeryRoom

{
    public enum CurrentStatus
    {
        AVAILABLE,
        OCCUPIED,
        MAINTENANCE
    }
}
